--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -45,14 +45,14 @@ RUN npm install --global yarn
 ENV VIRTUAL_ENV_PATH_MYTHRIL=/opt/venv/mythril
 RUN python3 -m venv $VIRTUAL_ENV_PATH_MYTHRIL
 ENV PATH="$VIRTUAL_ENV_PATH_MYTHRIL/bin:$PATH"
-COPY .docker/requirements.mythril.txt .
+COPY src/requirements.mythril.txt .
 RUN source $VIRTUAL_ENV_PATH_MYTHRIL/bin/activate
 RUN pip install -r requirements.mythril.txt --no-input --no-cache-dir
 
 ENV VIRTUAL_ENV_PATH_SLITHER=/opt/venv/slither
 RUN python3 -m venv $VIRTUAL_ENV_PATH_SLITHER
 ENV PATH="$VIRTUAL_ENV_PATH_SLITHER/bin:$PATH"
-COPY .docker/requirements.slither.txt .
+COPY src/requirements.slither.txt .
 RUN source $VIRTUAL_ENV_PATH_SLITHER/bin/activate
 RUN pip install -r requirements.slither.txt --no-input --no-cache-dir
 
@@ -81,6 +81,6 @@ RUN mkdir -p /github/home/.cache/hardhat-nodejs && \
 RUN mkdir -p /home/hardhat/.config/matplotlib && \
   chown -R 1000:1000 /home/hardhat/.config/matplotlib 
 
-COPY .docker/.bashrc /home/hardhat/.bashrc
-COPY .docker/.inputrc /home/hardhat/.inputrc
+COPY src/.bashrc /home/hardhat/.bashrc
+COPY src/.inputrc /home/hardhat/.inputrc
 USER hardhat
