Feat(dockerfile): Add cmd command
- Add cmd command `/bin/bash` for the dev container.

--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -84,3 +84,4 @@ RUN mkdir -p /home/hardhat/.config/matplotlib && \
 COPY src/.bashrc /home/hardhat/.bashrc
 COPY src/.inputrc /home/hardhat/.inputrc
 USER hardhat
+CMD ["/bin/bash"]
