Feat: Add `.env` example create to image
- Add `create-env-example.sh` to the created image. This will allow
  repos that use this image to easily create `.env.example` files.

--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -83,5 +83,7 @@ RUN mkdir -p /home/hardhat/.config/matplotlib && \
 
 COPY src/.bashrc /home/hardhat/.bashrc
 COPY src/.inputrc /home/hardhat/.inputrc
+COPY scripts/create-env-example.sh /scripts/create-env-example.sh
+
 USER hardhat
 CMD ["/bin/bash"]
