Feat: Use gist files
- Use gist files for:
  * `/scripts/create-env-example.sh`
  * `.bashrc`
  * `.inputrc`
- Remove `.bashrc` and `.inputrc` from the repo as they aren't being
  used anymore.

--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -1,6 +1,8 @@
 # ppa:ethereum is not yet available on 22.04
 FROM ubuntu:20.04
+ARG USERNAME="hardhat"
 SHELL ["/bin/bash", "-c"]
+
 ENV DEBIAN_FRONTEND=nonintercative
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
@@ -81,9 +83,11 @@ RUN mkdir -p /github/home/.cache/hardhat-nodejs && \
 RUN mkdir -p /home/hardhat/.config/matplotlib && \
   chown -R 1000:1000 /home/hardhat/.config/matplotlib 
 
-COPY src/.bashrc /home/hardhat/.bashrc
-COPY src/.inputrc /home/hardhat/.inputrc
-COPY scripts/create-env-example.sh /scripts/create-env-example.sh
+ADD https://gist.githubusercontent.com/utkusarioglu/2d4be44dc7707afccd540ad99ba385e6/raw/3eb6693a91b1aa5b3863d087de1d189b72eeeec8/create-env-example.sh /scripts/create-env-example.sh
+ADD https://gist.githubusercontent.com/utkusarioglu/3523b00578807d63b05399fe57a4b2a7/raw/7df99dbbeb8ee4d14396be043aef4fbf8fb42ce5/.bashrc /home/$USERNAME/.bashrc
+ADD https://gist.githubusercontent.com/utkusarioglu/d5c216c744460c45bf6260d0de4131b4/raw/d227102e3630a93f8eafcb4d2a5a053d2ae04415/.inputrc /home/$USERNAME/.inputrc
 
-USER hardhat
-CMD ["/bin/bash"]
+USER $USERNAME
+
+# TODO make this work
+# CMD ["/bin/bash"]
