Feat: Allow root pass change for the containers
- Add `ROOT_PASS` arg to dockerfile to allow secrets to set a
  root pass.
- Add the necessary ci pipeline for this value to be used.

--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -1,6 +1,9 @@
 # ppa:ethereum is not yet available on 22.04
 FROM ubuntu:20.04
+
+ARG ROOT_PASS=root
 ARG USERNAME="hardhat"
+
 SHELL ["/bin/bash", "-c"]
 
 ENV DEBIAN_FRONTEND=nonintercative
@@ -96,6 +99,8 @@ RUN chmod +x \
   /scripts/create-env-example.sh \
   /home/$USERNAME/.bashrc \
   /home/$USERNAME/.inputrc 
+
+RUN echo "root:$ROOT_PASS" | chpasswd
 
 USER $USERNAME
 
