--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -41,6 +41,8 @@ jobs:
             ROOT_PASS=${{ secrets.DOCKER_IMAGE_ROOT_PASS }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+          build-args: |
+            ROOT_PASS=${{ secrets.DOCKER_IMAGE_ROOT_PASS }}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
