Chore(ci): Add docker context
- Add context `.` to docker build step. This is the default value
  for this action but we belive it's better to see it to parse it
  mentally.

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -32,6 +32,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           tags: |
             utkusarioglu/ethereum-devcontainer:latest
             utkusarioglu/ethereum-devcontainer:1.0.1
