--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - src/**
+      - .github/workflows/build-and-push-docker-image.yml
   workflow_dispatch:
 
 env:
@@ -64,7 +65,7 @@ jobs:
           context: .
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}:1.0.2
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}:1.0.3
           file: src/Dockerfile.dev
           push: ${{ github.ref == 'refs/heads/main' }}
           cache-from: type=local,src=${{ env.CACHE_FROM_SRC }}
