--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           files: |
             src/**
+            .github/workflows/build-and-push.yml
 
       - name: Get latest tag
         id: latest_tag
