feature/devcontainer-cli/2

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           image_name=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}
           repo_tag=${{ steps.latest_tag.outputs.tag }}
-          image_tag=${repo_tag//\//--}
+          image_tag=${repo_tag//\//-}
           image_ref="${image_name}:${image_tag}"
           short_image_ref="${{ env.CONTAINER_NAME }}:${image_tag}"
 
@@ -109,12 +109,7 @@ jobs:
           imageName: ${{ steps.variables.outputs.image-name }}
           imageTag: ${{ steps.variables.outputs.image-tag }}
           subFolder: src
-          runCmd: |-
-            gh --version
-            node --version
-            node <<EOF
-            console.log("Node runs as expected");
-            EOF
+          runCmd: scripts/devcontainer-run-cmd.sh
 
       - name: Push devcontainer ${{ steps.variables.outputs.short-image-ref }}
         if: steps.run_state.outputs.run_docker_build == 'true'
