feature/devcontainer-cli/3

--- a/src/Dockerfile.dev
+++ b/src/Dockerfile.dev
@@ -109,3 +109,5 @@ RUN chmod +x \
   /scripts/create-env-example.sh \
   /home/$USERNAME/.bashrc \
   /home/$USERNAME/.inputrc 
+
+COPY scripts/mounted /scripts
