feature/devcontainer-cli/4

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -32,6 +32,7 @@ jobs:
         with:
           files: |
             src/**
+            scripts/mounted/**
             .github/workflows/build-and-push.yml
 
       - name: Get latest tag
