feature/devcontainer-cli/5

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -42,50 +42,27 @@ jobs:
           fallback: tag-unavailable
 
       - name: Declare run state
-        id: run_state
-        run: |
-          if [ ${{ steps.latest_tag.outputs.tag }} != tag-unavailable ] && \
-            ( \
-              [ ${{ steps.changed_files.outputs.any_modified }} == true ] || \
-              [ ${{ github.event_name }} == workflow_dispatch ] \
-            );
-          then
-            echo "::set-output name=run_docker_build::true"
-            echo "::debug::Docker build will carry out as expected."
-          else
-            echo "::set-output name=run_docker_build::false"
-            echo "::debug::Docker build is cancelled as none of the watched files have been changed."
-            echo "Docker build is cancelled as none of the watched files have been changed."
-          fi
+        id: run-state
+        run: scripts/workflows/run-state.sh
 
       - name: Variables
         id: variables
-        run: |
-          image_name=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}
-          repo_tag=${{ steps.latest_tag.outputs.tag }}
-          image_tag=${repo_tag//\//-}
-          image_ref="${image_name}:${image_tag}"
-          short_image_ref="${{ env.CONTAINER_NAME }}:${image_tag}"
-
-          echo "::set-output name=image-name::$image_name"
-          echo "::set-output name=image-tag::$image_tag"
-          echo "::set-output name=image-ref::$image_ref"
-          echo "::set-output name=short-image-ref::$short_image_ref"
+        run: scripts/workflows/variables.sh
 
       - name: Set up Docker Buildx
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build container ${{ steps.variables.outputs.short-image-ref }}
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         id: docker-build
         uses: docker/build-push-action@v2
         with:
@@ -100,7 +77,7 @@ jobs:
             ROOT_PASS=${{ secrets.DOCKER_IMAGE_ROOT_PASS }}
 
       - name: Build devcontainer ${{ steps.variables.outputs.short-image-ref }}
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         id: devcontainer_build
         uses: devcontainers/ci@v0.2
         env:
@@ -113,11 +90,11 @@ jobs:
           runCmd: /scripts/devcontainer-check.sh
 
       - name: Push devcontainer ${{ steps.variables.outputs.short-image-ref }}
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         run: docker push ${{ steps.variables.outputs.image-ref }}
 
       - name: Set Docker Hub description
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         uses: peter-evans/dockerhub-description@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
