Switch to devcontainer spec (#1)
* Chore(ci): Switch to devcontainer spec

* 2

* feature/devcontainer-cli/2

* feature/devcontainer-cli/3

* feature/devcontainer-cli/4

* feature/devcontainer-cli/5

* feature/devcontainer-cli/6

* feature/devcontainer-cli/1

* feature/devcontainer-cli/1

* feature/devcontainer-cli/2

* feature/devcontainer-cli/3

* feature/devcontainer-cli/3

* feature/devcontainer-cli/4

* feature/devcontainer-cli/5

* feature/devcontainer-cli/6

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -2,8 +2,9 @@ name: build-and-push
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - "*.*.*"
+      - "feature/*/*"
     paths:
       - src/**
       - .github/workflows/build-and-push.yml
@@ -29,13 +30,25 @@ jobs:
         id: changed_files
         uses: tj-actions/changed-files@v25
         with:
-          files: src/**
+          files: |
+            src/**
+            scripts/mounted/**
+            .github/workflows/build-and-push.yml
+
+      - name: Get latest tag
+        id: latest_tag
+        uses: WyriHaximus/github-action-get-previous-tag@v1
+        with:
+          fallback: tag-unavailable
 
       - name: Declare run state
-        id: run_state
+        id: run-state
         run: |
-          if [ ${{ steps.changed_files.outputs.any_modified }} == true ] || \
-            [ ${{ github.event_name }} == workflow_dispatch ];
+          if [ ${{ steps.latest_tag.outputs.tag }} != tag-unavailable ] && \
+            ( \
+              [ ${{ steps.changed_files.outputs.any_modified }} == true ] || \
+              [ ${{ github.event_name }} == workflow_dispatch ] \
+            );
           then
             echo "::set-output name=run_docker_build::true"
             echo "::debug::Docker build will carry out as expected."
@@ -45,45 +58,71 @@ jobs:
             echo "Docker build is cancelled as none of the watched files have been changed."
           fi
 
+      - name: Variables
+        id: variables
+        run: |
+          image_name=${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}
+          repo_tag=${{ steps.latest_tag.outputs.tag }}
+          image_tag=${repo_tag//\//-}
+          image_ref="${image_name}:${image_tag}"
+          short_image_ref="${{ env.CONTAINER_NAME }}:${image_tag}"
+
+          echo "::set-output name=image-name::$image_name"
+          echo "::set-output name=image-tag::$image_tag"
+          echo "::set-output name=image-ref::$image_ref"
+          echo "::set-output name=short-image-ref::$short_image_ref"
+
       - name: Set up Docker Buildx
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build image and push to Docker Hub
-        if: steps.run_state.outputs.run_docker_build == 'true'
+      - name: Build container ${{ steps.variables.outputs.short-image-ref }}
+        if: steps.run-state.outputs.run_docker_build == 'true'
         id: docker-build
         uses: docker/build-push-action@v2
         with:
           context: .
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}:1.0.3
+          tags: ${{ steps.variables.outputs.image-ref }}
           file: src/Dockerfile.dev
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: true
+          pull: false
           cache-from: type=local,src=${{ env.CACHE_FROM_SRC }}
           cache-to: type=local,mode=max,dest=${{ env.CACHE_TO_DEST }}
           build-args: |
             ROOT_PASS=${{ secrets.DOCKER_IMAGE_ROOT_PASS }}
 
-      - name: Image digest
-        if: steps.run_state.outputs.run_docker_build == 'true'
-        run: echo ${{ steps.docker-build.outputs.digest }}
+      - name: Build devcontainer ${{ steps.variables.outputs.short-image-ref }}
+        if: steps.run-state.outputs.run_docker_build == 'true'
+        id: devcontainer_build
+        uses: devcontainers/ci@v0.2
+        env:
+          IMAGE_NAME: ${{ steps.variables.outputs.image-name }}
+          IMAGE_TAG: ${{ steps.variables.outputs.image-tag }}
+        with:
+          imageName: ${{ steps.variables.outputs.image-name }}
+          imageTag: ${{ steps.variables.outputs.image-tag }}
+          subFolder: src
+          runCmd: /scripts/devcontainer-check.sh
+
+      - name: Push devcontainer ${{ steps.variables.outputs.short-image-ref }}
+        if: steps.run-state.outputs.run_docker_build == 'true'
+        run: docker push ${{ steps.variables.outputs.image-ref }}
 
       - name: Set Docker Hub description
-        if: steps.run_state.outputs.run_docker_build == 'true'
+        if: steps.run-state.outputs.run_docker_build == 'true'
         uses: peter-evans/dockerhub-description@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.CONTAINER_NAME }}
+          repository: ${{ steps.variables.outputs.image-name }}
           short-description: Ethereum devcontainers
           readme-filepath: src/DOCKER_README.md
 
