Fix(ci): Faulty output reference
- Fixes #2 by changing the replacing `dev_image_name` with `image_name`.
  The runs were failing because there is no such output.

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -112,7 +112,7 @@ jobs:
           IMAGE_NAME: ${{ steps.variables.outputs.image_name }}
           IMAGE_TAG: ${{ steps.variables.outputs.image_tag }}
         with:
-          imageName: ${{ steps.variables.outputs.dev_image_name }}
+          imageName: ${{ steps.variables.outputs.image_name }}
           imageTag: ${{ steps.variables.outputs.dev_image_tag }}
           subFolder: src
           runCmd: /scripts/devcontainer-check.sh
