--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -4,7 +4,8 @@ on:
   push:
     tags:
       - "**.**.**"
-      - "feature/**/**"
+      - feature/**/**
+      - experiment/**/**/**
     paths:
       - src/**
       - .github/workflows/build-and-push.yml
